🐛 FIX:  sizigs overflow

--- a/frontend_react/src/container/Header/Header.scss
+++ b/frontend_react/src/container/Header/Header.scss
@@ -1,4 +1,5 @@
 #home {
+  height: 100vh;
   position: relative;
   background: url("../../assets/bgIMG.png");
   background-size: cover;
@@ -183,6 +184,7 @@
   img {
     //model image
     width: 100%;
+
     object-fit: contain;
     z-index: 1;
   }
